--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/server.js",
-    "build": "tsc build --output public",
+    "build": "tsc build",
     "dev": "tsnd --exit-child src/server.ts"
   },
   "keywords": [],
